--- a/css_world_note/块级元素.md
+++ b/css_world_note/块级元素.md
@@ -50,7 +50,7 @@ width/height 作用在内在盒子上
     谓流动性，并不是看上去的宽度100%显示这么简单，而是一种`margin/border/padding` 
     和`content`  内容区域自动分配水平空间的机制
 
-    垂直导航,下面的代码是错误的:
+    垂直导航,下面的代码是**错误**的:
 
     ```CSS
     a {
